--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,4 +2,5 @@ set -g default-terminal "xterm-256color"
 set -g status off
 set-option -g pane-active-border-bg default
 set-option -g pane-active-border-fg cyan
-
+set -g terminal-overrides "screen*:kLFT5=\eOD:kRIT5=\eOC:kUP5=\eOA:kDN5=\eOB:smkx@:rmkx@"
+set-window-option -g xterm-keys on
